--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
